# Zonos-API

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  api.py  gradio_interface.py  main_zonos_tts_api.py  pyproject.toml
config/: config.py
constraints/: torch-cu124-mamba.txt
docker/scripts/: fetch_mamba_wheel.sh
logger/: __init__.py  logger_helper.py
requirements/: compile.txt  runtime.txt
tests/: test_api.py  test_installer_guard.py  test_integrity.py  test_snapshot_request.py
tools/docker/: fetch_mamba_wheel.py  update_pytorch_digest.sh
zonos/: autoencoder.py  conditioning.py  integrity.py  model.py  sampling.py  snapshot_request.py  speaker_cloning.py
zonos/backbone/: __init__.py  _mamba_ssm.py  _torch.py
