[project]
name = "zonos"
version = "0.1.0"
description = "Text-to-speech by Zyphra"
readme = "README.md"
requires-python = ">=3.11,<3.12"

# Intentionally empty to avoid pulling dependencies when running `pip install .`.
# Runtime and compile requirements are managed via Dockerfile and requirements/*.txt.
dependencies = []

[project.optional-dependencies]
# Keep extras empty so heavyweight deps stay confined to Docker builds.
compile = []

[tool.setuptools.packages.find]
include = ["zonos"]
