[project]
name = "zonos"
version = "0.1.0"
description = "Text-to-speech by Zyphra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "packaging==24.2",
    "setuptools==75.8.0",

    "accelerate==1.6.0",
    "einops==0.8.0",
    "fastapi==0.115.8",
    "gradio==5.15.0",
    "huggingface-hub==0.28.1",
    "inflect==7.5.0",
    "kanjize==1.5.0",
    "numpy==2.2.2",
    "phonemizer==3.3.0",
    "pydantic==2.10.6",
    "pydub==0.25.1",
    "soundfile==0.13.1",
    "sudachidict-full==20250129",
    "sudachipy==0.6.10",
    "transformers==4.48.3",
    "triton==3.2.0",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
cuda124 = [
  "torch==2.6.0+cu124 ; platform_system == 'Linux'",
  "torchaudio==2.6.0+cu124 ; platform_system == 'Linux'",
]
# These are technically optional,
# but mamba-ssm is required to run hybrid models.
compile = [
    "causal-conv1d==1.5.0.post8",
    "flash-attn==2.7.4.post1",
    "mamba-ssm==2.2.4",
]

[tool.setuptools.packages.find]
include = ["zonos"]
